<resources>
    <string name="app_name">매듭</string>
    <string name="kakao_native_key">kakao97efcfea85e19c27e2643767d2b69e12</string>

    <string name="word_main">메인</string>
    <string name="word_knot_list">매듭 리스트</string>
    <string name="word_profile">프로필</string>
    <string name="word_setting">설정</string>
    <string name="word_sunday">일</string>
    <string name="word_monday">월</string>
    <string name="word_tuesday">화</string>
    <string name="word_wednesday">수</string>
    <string name="word_thursday">목</string>
    <string name="word_friday">금</string>
    <string name="word_saturday">토</string>
    <string name="word_see_more">더보기</string>
    <string name="word_calendar">캘린더</string>
    <string name="word_today">TODAY</string>
    <string name="word_statistics">통계</string>
    <string name="word_loading">로딩중...</string>
    <string name="word_all_statistics">종합 통계</string>
    <string name="word_send">보내기</string>
    <string name="word_save">저장</string>
    <string name="word_create">만들기</string>
    <string name="word_role">역할</string>
    <string name="word_nothing">없음</string>
    <string name="word_team_leader">팀 장</string>
    <string name="word_team_member">팀 원</string>
    <string name="word_private">비공개</string>
    <string name="word_public">공개</string>
    <string name="word_invite">초대</string>
    <string name="word_category">카테고리</string>

    <!-- Sign -->
    <string name="sign_email">이메일로 시작하기</string>
    <string name="sign_already_account">이미 계정이 있으신가요?</string>
    <string name="sign_about_service_personal_info">가입을 진행할 경우, 서비스 이용약관 및\n개인정보처리 방침에 동의한 것으로 간주합니다.</string>
    <string name="sign_sign_up">회원가입</string>
    <string name="sign_id">아이디</string>
    <string name="sign_input_id_hint">아이디를 입력하세요.</string>
    <string name="sign_organization">학교/소속</string>
    <string name="sign_input_organization_hint">학교 또는 소속을 입력하세요.</string>
    <string name="sign_major">전공/소속부</string>
    <string name="sign_input_major_hint">전공 또는 소속부를 입력하세요.</string>
    <string name="sign_introduce">자기소개 (선택)</string>
    <string name="sign_input_inroduce_hint">간단한 자기소개 또는 포토폴리오를 입력해주세요.</string>
    <string name="sign_max_introduce_text">%s/150</string>
    <string name="sign_start">시작하기</string>

    <!-- Main -->
    <string name="main_week_schedule">이번주 일정</string>
    <string name="main_participating_knot">진행중인 매듭</string>
    <string name="main_participating_knot_number">매듭 %s</string>
    <string name="main_todo_list">전체 할 일</string>
    <string name="main_todo_content">%s ~ %s | %s</string>
    <string name="main_gathering_content">%s | %s</string>
    
    <!-- Main_Calendar -->
    <string name="main_calendar_year">%s.</string>
    <string name="main_calendar_month">%s월</string>
    <string name="main_calendar_day_with_week">%d. %s</string>

    <!-- Main_Detail_Knot_statistics -->
    <string name="main_knot_detail_my_statistics">나의 참여율</string>
    <string name="main_knot_detail_personal_statistics">개인 참여율</string>
    <string name="main_knot_detail_personal_percent">%s %s%%</string>
    <string name="main_knot_detail_only_percent">%d%%</string>
    <string name="main_knot_detail_only_count">%d회</string>
    <string name="main_knot_detail_only_object_count">%d개</string>
    <string name="main_knot_detail_best_team">참여 BEST</string>
    <string name="main_knot_detail_chat_statistics">대화 참여율</string>
    <string name="main_knot_detail_gathering_statistics">모임 참여</string>
    <string name="main_knot_detail_todo_statistics">완료한 일</string>
    <string name="main_knot_detail_rank_statistics">전체 순위</string>
    <string name="main_knot_detail_ranking">%d위.</string>
    <string name="main_knot_detail_best_team_all_statistics">(%s%%)</string>

    <!-- Main_Detail_Knot_Chat -->
    <string name="main_knot_detail_team_chat">팀 대화</string>
    <string name="main_knot_detail_team_chat_room">팀 대화방</string>
    <string name="main_knot_detail_chat_message_hint">메시지를 입력하세요.</string>

    <!-- Main_Detail_Knot_Role_And_Rule_Edit -->
    <string name="main_knot_rule_edit">룰 설정</string>

    <!-- Main_Create_Knot -->
    <string name="main_create_knot">새 매듭 만들기</string>
    <string name="main_create_knot_title">매듭 이름</string>
    <string name="main_create_knot_title_hint">시작하는 매듭의 이름을 입력해주세요!</string>
    <string name="main_create_knot_introduce">매듭 설명</string>
    <string name="main_create_knot_introduce_hint">매듭에 대한 설명을 입력해주세요!\n\nex) 팀 모집 내용, 목표 등</string>
    <string name="main_crete_knot_invite_member">매듭원 초대하기</string>
    <string name="main_create_knot_invite_hint">검색하거나 코드를 복사해서 매듭원들을 초대 해보세요!</string>
    <string name="main_create_knot_invite_member_hint">아이디로 사용자 초대</string>
    <string name="main_create_knot_invited_member">초대된 사용자</string>

    <!-- Main_Edit_Knot -->
    <string name="main_edit_knot">매듭 수정</string>

    <!-- Main_Knot_Search -->
    <string name="main_knot_search_hint">검색어를 입력하세요.</string>

    <!-- Main_Knot_Application -->
    <string name="main_knot_application_applicants">신청자 목록</string>
    <string name="main_knot_application_detail">상세 페이지</string>
    <string name="main_knot_application_apply">신청하기</string>
    <string name="main_knot_application_my_pr">신청내용</string>
    <string name="main_knot_application_cancel">취소하기</string>
    <string name="main_knot_application_my_intro">자기소개</string>
    <string name="main_knot_application_my_intro_hint">프로필의 추가적인 설명이나,\n매듭의 모집 공고와 어울리는 자기소개를 써보세요!</string>
    <string name="main_knot_application_reject">거절하기</string>
    <string name="main_knot_application_approve">승인하기</string>

</resources>