<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.knot.domain.enums.CreateOrEditKnotType"/>
        <variable
            name="vm"
            type="com.knot.presentation.ui.main.createOrEditKnot.CreateOrEditKnotViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/image_button_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="12dp"
                android:onClick="@{()->vm.onClickBack()}"
                android:background="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@{vm.uiState.pageType == CreateOrEditKnotType.CREATE ? @string/word_create : @string/word_save}"
                android:textAppearance="@style/medium_16"
                android:textColor="@color/color_ffcc00"
                android:onClick="@{()->vm.onClickCreateOrSave()}"
                app:layout_constraintBottom_toBottomOf="@id/image_button_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_button_back" />

            <TextView
                android:id="@+id/text_view_create_or_edit_knot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@{vm.uiState.pageType == CreateOrEditKnotType.CREATE ? @string/main_create_knot : @string/main_edit_knot}"
                android:textAppearance="@style/bold_24"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_button_back" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_knot_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_rectangle_filled_white_stroke_ffcc00_radius_10"
                android:minHeight="346dp"
                android:paddingBottom="24dp"
                app:layout_constraintTop_toBottomOf="@id/text_view_create_or_edit_knot">

                <TextView
                    android:id="@+id/text_view_knot_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_create_knot_title"
                    android:textAppearance="@style/semi_bold_16"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_text_knot_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="6dp"
                    android:text="@={vm.uiState.title}"
                    android:background="@drawable/bg_rectangle_filled_f9f9f9_radius_5"
                    android:hint="@string/main_create_knot_title_hint"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp"
                    android:textAppearance="@style/medium_14"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_c4c4c4"
                    app:layout_constraintTop_toBottomOf="@id/text_view_knot_title" />

                <TextView
                    android:id="@+id/text_view_knot_introduce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/main_create_knot_introduce"
                    android:textAppearance="@style/semi_bold_16"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_knot_title" />

                <EditText
                    android:id="@+id/edit_text_knot_introduce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/bg_rectangle_filled_f9f9f9_radius_5"
                    android:gravity="top"
                    android:text="@={vm.uiState.content}"
                    android:hint="@string/main_create_knot_introduce_hint"
                    android:minHeight="150dp"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp"
                    android:textAppearance="@style/medium_14"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_c4c4c4"
                    app:layout_constraintTop_toBottomOf="@id/text_view_knot_introduce" />

                <RadioGroup
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_text_knot_introduce"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_button_private"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word_private"
                        android:background="@android:color/transparent"
                        android:checked="@={vm.uiState.isPrivate()}"
                        android:textAppearance="@style/medium_14"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/radio_button_public"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:background="@android:color/transparent"
                        android:checked="@={!vm.uiState.isPrivate()}"
                        android:text="@string/word_public"
                        android:textAppearance="@style/medium_14"
                        android:textColor="@color/black" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/text_view_invite"
                app:layout_constraintTop_toBottomOf="@id/constraint_layout_knot_info"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textAppearance="@style/bold_18"
                android:text="@string/main_crete_knot_invite_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_view_invite_hint"
                app:layout_constraintTop_toBottomOf="@id/text_view_invite"
                app:layout_constraintStart_toStartOf="@id/text_view_invite"
                android:layout_marginTop="4dp"
                android:textColor="@color/color_8c8c8c"
                android:textAppearance="@style/regular_12"
                android:text="@string/main_create_knot_invite_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="@id/button_invite"
                app:layout_constraintEnd_toStartOf="@id/button_invite"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_rectangle_empty_stroke_c4c4c4_radius_5"
                app:layout_constraintStart_toStartOf="@id/text_view_invite_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_view_search"
                    android:background="@drawable/ic_search_8c8c8c"
                    android:layout_marginStart="12dp"
                    android:layout_marginVertical="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>

                <EditText
                    android:id="@+id/edit_text_invite_id"
                    app:layout_constraintTop_toTopOf="@id/image_view_search"
                    app:layout_constraintStart_toEndOf="@id/image_view_search"
                    app:layout_constraintBottom_toBottomOf="@id/image_view_search"
                    android:layout_marginStart="4dp"
                    android:textAppearance="@style/medium_14"
                    android:textColor="@color/black"
                    android:text="@={vm.uiState.userId}"
                    android:textColorHint="@color/color_8c8c8c"
                    android:hint="@string/main_create_knot_invite_member_hint"
                    android:background="@android:color/transparent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="12dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_invite"
                app:layout_constraintTop_toBottomOf="@id/text_view_invite_hint"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_rectangle_filled_ffcc00_radius_4"
                android:text="@string/word_invite"
                android:onClick="@{()->vm.onClickAddMember()}"
                android:textAppearance="@style/bold_14"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_width="72dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/text_view_invited_member"
                app:layout_constraintTop_toBottomOf="@id/button_invite"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textAppearance="@style/medium_12"
                android:text="@string/main_create_knot_invited_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_invited_member"
                app:layout_constraintTop_toBottomOf="@id/text_view_invited_member"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>